--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="script2.js"></script>
+  <script src="script.js"></script>
  
 </body>
 </html>
